# delete-defaults-macos

./: .gitignore  Cargo.toml  README.md  delete-defaults-macos.rs
.github/workflows/: ci.yml
delete-defaults-macos/: consts.rs  errors.rs  lib.rs
