[package]
name = "delete-defaults-macos"
version = "0.0.1"
edition = "2024"
autoexamples = false
autobenches = false

[package.metadata]
cargo-args = ["-Zmtime-on-use", "-Zavoid-dev-deps", "-Zcustom_mir"]


[lib]
name = "delete_defaults_macos"
path = "delete-defaults-macos/lib.rs"

doctest = false
bench = false


[[bin]]
name = "ddmos"
path = "./delete-defaults-macos.rs"
doctest = false
bench = false
doc = false

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive", "env", "string", "unicode", "wrap_help"] }
iocore = "2.0.2"
plist = "1.7.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
